// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileInput > renders with accept attribute 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="flex flex-col gap-1 text-sm font-medium text-slate-700"
  >
    Upload
    <input
      accept=".csv"
      class="text-sm text-slate-500 file:mr-3 file:rounded-md file:border-0 file:bg-indigo-600 file:px-3 file:py-1.5 file:text-sm file:font-medium file:text-white file:transition hover:file:bg-indigo-700 focus-visible:ring-2 focus-visible:ring-indigo-600 focus-visible:outline-none"
      type="file"
    />
  </label>
</div>
`;

exports[`FileInput > renders with fileName 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="flex flex-col gap-1 text-sm font-medium text-slate-700"
  >
    Music Contracts
    <input
      class="text-sm text-slate-500 file:mr-3 file:rounded-md file:border-0 file:bg-indigo-600 file:px-3 file:py-1.5 file:text-sm file:font-medium file:text-white file:transition hover:file:bg-indigo-700 focus-visible:ring-2 focus-visible:ring-indigo-600 focus-visible:outline-none"
      type="file"
    />
  </label>
  <span
    class="text-xs text-slate-500 italic"
  >
    data.txt
  </span>
</div>
`;

exports[`FileInput > renders without fileName 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="flex flex-col gap-1 text-sm font-medium text-slate-700"
  >
    Music Contracts
    <input
      class="text-sm text-slate-500 file:mr-3 file:rounded-md file:border-0 file:bg-indigo-600 file:px-3 file:py-1.5 file:text-sm file:font-medium file:text-white file:transition hover:file:bg-indigo-700 focus-visible:ring-2 focus-visible:ring-indigo-600 focus-visible:outline-none"
      type="file"
    />
  </label>
</div>
`;
